--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
     <!--Este es un elemento de navegación (nav) que debe ser único por página HTML. Tiene una clase "row"-->
     <nav class="row">
         <!--Este es un link (a) que lleva hacia otra página (href)-->
-        <a href="#">Inicio</a>
-        <a href="#">Entregas</a>
+        <a href="#">uno</a>
+        <a href="#">dos</a>
         <!--Esta es una división con id único "logo" que contiene la imagen del logo-->
-        <div id="logo"><img src="media/logo_B.png" alt="Esta es la descripción del logo por si no carga correctamente"></div>
-        <a href="#">TP 2</a>
-        <a href="#">Contacto</a>
+        <div id="logo"><img src="media/logo_B.png" alt="no carga"></div>
+        <a href="#">tres</a>
+        <a href="#">Cuatro</a>
     </nav>
 
     <!--Banner con información dentro-->
@@ -52,18 +52,18 @@
         <div class="banner_info">
             <div class="colores">
                 <!--Esta división tiene un id único "color#" que debe ser único por documento html-->
-                <div id="color1" class="color"><img class="icon" src="media/icon1.png" alt="Esta es la descripción del icono por si no carga correctamente"></div>
-                <div id="color2" class="color"><img class="icon" src="media/icon2.png" alt="Esta es la descripción del icono por si no carga correctamente"></div>
-                <div id="color3" class="color"><img class="icon" src="media/icon3.png" alt="Esta es la descripción del icono por si no carga correctamente"></div>
-                <div id="color4" class="color"><img class="icon" src="media/icon4.png" alt="Esta es la descripción del icono por si no carga correctamente"></div>
+                <div id="color1" class="color"><img class="icon" src="media/icon1.png" alt="no carga"></div>
+                <div id="color2" class="color"><img class="icon" src="media/icon2.png" alt="no carga"></div>
+                <div id="color3" class="color"><img class="icon" src="media/icon3.png" alt="no carga"></div>
+                <div id="color4" class="color"><img class="icon" src="media/icon4.png" alt="no carga"></div>
             </div>
             <!--Este es un título de clase 1 (El más importante)-->
-            <h1>Cambiemos colores, textos, tipografía
+            <h1>ya cambiamos colores, tipografías
                 <!--Salto de línea--><br>
-                 e imagenes en esta página.</h1>
+                 e imagenes de la página.</h1>
             <!--Este es un párrafo de texto-->
-            <p>¡Inspecciona el código para ver que es cada cosa!</p>
-            <a href="#" class="btn">Descargar esta plantilla</a>
+            <p>revisamos el codigo</p>
+            <a href="#" class="btn">ver más</a>
         </div>
     </div>
 
