--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <div id="color4" class="color"><img class="icon" src="media/icon4.png" alt="no carga"></div>
             </div>
             <!--Este es un título de clase 1 (El más importante)-->
-            <h1>ya cambiamos colores, tipografías
+            <h1>ya cambiamos colores, textos, tipografías
                 <!--Salto de línea--><br>
                  e imagenes de la página.</h1>
             <!--Este es un párrafo de texto-->
